--- a/client/src/app/quiz/quiz.component.html
+++ b/client/src/app/quiz/quiz.component.html
@@ -1,4 +1,11 @@
 <section class="quiz">
-    <h2 class="quiz-title">{{ quiz.title }}</h2>
-    <a [routerLink]="['/details', quiz.id]">View Details</a>
+    <mat-card appearance="outlined">
+        <mat-card-header>
+            <mat-card-title>{{ quiz.title }}</mat-card-title>
+            <mat-card-subtitle>{{ quiz.questions.length }} questions</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-actions>
+            <button mat-button color="primary" [routerLink]="['/quiz', quiz.id]">Start</button>
+        </mat-card-actions>
+    </mat-card>
 </section>
