Create page to add quiz

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,8 +3,8 @@
     <button mat-button routerLink="/">
       <h3>All Quizzes</h3>
     </button>
-    <button mat-button routerLink="/add-quiz" class="top-margin">
-      <h3>Add quizzes</h3>
+    <button mat-button routerLink="/create-quiz" class="top-margin">
+      <h3>Create Quizzes</h3>
     </button>
   </mat-toolbar>
   <section class="content">
