--- a/client/src/app/create-quiz/create-quiz.component.css
+++ b/client/src/app/create-quiz/create-quiz.component.css
@@ -21,12 +21,18 @@ border-radius: 0;
     justify-content: center;
 }
 
-.input-field{
+.input-container{
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 20rem;
     padding: 10px -10px;
     margin: 10px 0;
+
+}
+
+.response-settings{
+    padding: 10px;
 }
 
 textarea {
