--- a/client/src/app/quiz/quiz.component.html
+++ b/client/src/app/quiz/quiz.component.html
@@ -5,7 +5,7 @@
             <mat-card-subtitle>{{ quiz.questions.length }} questions</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <button mat-button color="primary" [routerLink]="['/quiz', quiz.id]">Start</button>
+            <button mat-button color="primary" [routerLink]="['/quiz', quiz._id]">Start</button>
         </mat-card-actions>
     </mat-card>
 </section>
