Start implementation of authentication

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,6 +6,9 @@
     <button mat-button routerLink="/create-quiz" class="top-margin">
       <h3>Create Quizzes</h3>
     </button>
+    <button mat-button routerLink="/login" class="top-margin">
+      <h3>Login</h3>
+    </button>
   </mat-toolbar>
   <section class="content">
     <router-outlet></router-outlet>
