Store and display user attempts

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,6 +6,9 @@
     <button mat-button routerLink="/create-quiz" class="top-margin">
       <h3>Create Quizzes</h3>
     </button>
+    <button mat-button routerLink="/quiz-attempts" class="top-margin">
+      <h3>Quiz Attempts</h3>
+    </button>
     <div class="right-side">
       <button mat-button *ngIf="isLoggedIn" (click)="logout()">
         <h3>Logout</h3>
