--- a/client/src/app/quiz/quiz.component.html
+++ b/client/src/app/quiz/quiz.component.html
@@ -2,7 +2,11 @@
     <mat-card appearance="outlined">
         <mat-card-header>
             <mat-card-title>{{ quiz.title }}</mat-card-title>
-            <mat-card-subtitle>{{ quiz.questions.length }} questions</mat-card-subtitle>
+            <mat-card-subtitle>{{ quiz.questions.length }} questions |
+            Last Attempt:
+            <span *ngIf="attempt; else notAttempted">{{ attempt.attemptDate | date }} | Last Score: {{ attempt.score }}</span>
+            <ng-template #notAttempted>Never</ng-template>
+        </mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
             <button mat-button color="primary" [routerLink]="['/quiz', quiz._id]">Start</button>
