Separate routes and controllers, include createdBy in Quiz model

--- a/client/src/app/play-quiz/play-quiz.component.html
+++ b/client/src/app/play-quiz/play-quiz.component.html
@@ -1,4 +1,5 @@
 <section class="quiz-container">
+  <h1>{{ quiz?.title }}</h1>
   <section class="reading">
     <mat-accordion>
       <mat-expansion-panel [expanded]="!showQuestions">
