--- a/client/src/app/quiz/quiz.component.html
+++ b/client/src/app/quiz/quiz.component.html
@@ -1,15 +1,24 @@
 <section class="quiz">
     <mat-card appearance="outlined">
-        <mat-card-header>
-            <mat-card-title>{{ quiz.title }}</mat-card-title>
-            <mat-card-subtitle>{{ quiz.questions.length }} questions |
-            Last Attempt:
-            <span *ngIf="attempt; else notAttempted">{{ attempt.attemptDate | date }} | Last Score: {{ attempt.score }}</span>
-            <ng-template #notAttempted>Never</ng-template>
-        </mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-actions>
-            <button mat-button color="primary" [routerLink]="['/quiz', quiz._id]">Start</button>
-        </mat-card-actions>
+      <mat-card-header>
+        <mat-card-title-group>
+          <mat-card-title>{{ quiz.title }}</mat-card-title>
+          <div *ngIf="loggedIn; else notLoggedIn">
+            <mat-card-subtitle>{{ quiz.questions.length }} questions</mat-card-subtitle>
+            <mat-card-subtitle>
+              Last Attempt:
+              <span *ngIf="attempt; else notAttempted">{{ attempt.attemptDate | date }} | Last Score: {{ attempt.score }}</span>
+              <ng-template #notAttempted>Never</ng-template>
+            </mat-card-subtitle>
+          </div>
+          <ng-template #notLoggedIn>
+            <mat-card-subtitle>{{ quiz.questions.length }} questions</mat-card-subtitle>
+          </ng-template>
+        </mat-card-title-group>
+      </mat-card-header>
+      <mat-card-actions>
+        <button mat-button color="primary" [routerLink]="['/quiz', quiz._id]">Start</button>
+      </mat-card-actions>
     </mat-card>
-</section>
+  </section>
+  
