--- a/client/src/app/create-quiz/create-quiz.component.css
+++ b/client/src/app/create-quiz/create-quiz.component.css
@@ -1,40 +1,32 @@
-.model-controls{
-    display: flex;
-    justify-content: space-between;
+.model-selection,
+.response-settings,
+.input-container {
+    margin-bottom: 20px;
 }
 
-.button-group {
-    display: flex;
-    flex: 19;
-    border-radius: 50px;
-    overflow: hidden;
-  }
-  
-.button-group button {
-flex-grow: 1;
-border-radius: 0;
+.model-info mat-card {
+    margin-top: 10px;
+    padding: 10px;
 }
 
-.options-container{
-    display: flex;
-    flex: 1;
-    justify-content: center;
+h2 {
+    margin-top: 20px;
+    font-size: 1.5rem;
 }
 
-.input-container{
+.input-container {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 20rem;
-    padding: 10px -10px;
-    margin: 10px 0;
-
 }
 
-.response-settings{
-    padding: 10px;
+.input-field {
+    flex-grow: 1;
 }
 
 textarea {
     white-space: pre-wrap;
-  }
+}
+
+pre {
+    white-space: pre-wrap;
+}
