--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,6 +1,7 @@
+<h2>All Quizzes</h2>
 <section class="search">
     <mat-form-field class="search-field">
-      <mat-label>Search here</mat-label>
+      <mat-label>Search Quizzes</mat-label>
       <input matInput type="text" #filter />
     </mat-form-field>
     <button mat-button class="search-button" type="button" (click)="filterQuizzes(filter.value)">
@@ -10,7 +11,6 @@
 
 <section class="results">
   <mat-card appearance="outlined">
-    <mat-card-header class="header">Quizzes</mat-card-header>
     <div *ngFor="let quiz of quizList">
       <app-quiz [quiz]="quiz"></app-quiz>
     </div>
