--- a/client/src/app/quiz/quiz.component.html
+++ b/client/src/app/quiz/quiz.component.html
@@ -1,26 +1,30 @@
 <section class="quiz">
-    <mat-card appearance="outlined">
-      <mat-card-header>
-        <mat-card-title-group>
-          <mat-card-title>{{ quiz.title }}</mat-card-title>
-          <div *ngIf="loggedIn; else notLoggedIn">
-            <mat-card-subtitle>{{ quiz.questions.length }} questions</mat-card-subtitle>
-            <mat-card-subtitle>Created by: {{ quiz.username }}</mat-card-subtitle>
-            <mat-card-subtitle>
-              Last Attempt:
-              <span *ngIf="attempt; else notAttempted">{{ attempt.attemptDate | date }} | Last Score: {{ attempt.score }}</span>
-              <ng-template #notAttempted>Never</ng-template>
-            </mat-card-subtitle>
-          </div>
-          <ng-template #notLoggedIn>
-            <mat-card-subtitle>{{ quiz.questions.length }} questions</mat-card-subtitle>
-            <mat-card-subtitle>Created by: {{ quiz.username }}</mat-card-subtitle>
-          </ng-template>
-        </mat-card-title-group>
-      </mat-card-header>
-      <mat-card-actions>
-        <button mat-button color="primary" [routerLink]="['/quiz', quiz._id]">Start</button>
-      </mat-card-actions>
-    </mat-card>
-  </section>
-  
+  <mat-card appearance="outlined">
+    <mat-card-header>
+      <mat-card-title-group>
+        <mat-card-title>{{ quiz.title }}</mat-card-title>
+        <div *ngIf="loggedIn; else notLoggedIn">
+          <mat-card-subtitle>{{ quiz.questions.length }} questions</mat-card-subtitle>
+          <mat-card-subtitle>Created by: {{ quiz.username }}</mat-card-subtitle>
+          <mat-card-subtitle>
+            Last Attempt:
+            <span *ngIf="attempt; else notAttempted">{{ attempt.attemptDate | date }} | Last Score: {{ attempt.score
+              }}</span>
+            <ng-template #notAttempted>Never</ng-template>
+          </mat-card-subtitle>
+        </div>
+        <ng-template #notLoggedIn>
+          <mat-card-subtitle>{{ quiz.questions.length }} questions</mat-card-subtitle>
+          <mat-card-subtitle>Created by: {{ quiz.username }}</mat-card-subtitle>
+        </ng-template>
+      </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-actions>
+      <button mat-button color="primary" [routerLink]="['/quiz', quiz._id]">Start</button>
+      <button mat-button *ngIf="loggedIn && quiz.createdBy === userId"
+        (click)="updateQuiz(quiz._id)">Update</button>
+      <button mat-button *ngIf="loggedIn && quiz.createdBy === userId"
+        (click)="deleteQuiz(quiz._id)">Delete</button>
+    </mat-card-actions>
+  </mat-card>
+</section>
