--- a/client/src/app/create-quiz/create-quiz.component.html
+++ b/client/src/app/create-quiz/create-quiz.component.html
@@ -1,4 +1,7 @@
 <section class="create-quiz">
+    <h1>Create a Quiz</h1>
+    <mat-card>
+        <mat-card-content>
     <div class="model-selection">
         <h2>Model Choice</h2>
         <mat-form-field appearance="outline">
@@ -74,4 +77,7 @@
         <button mat-flat-button color="primary" (click)="submitText(input.value)">{{ modelChoice === 'none' ? 'Submit
             JSON' : 'Submit Text' }}</button>
     </div>
+</mat-card-content>
+</mat-card>
+
 </section>
