--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -6,20 +6,20 @@
           <mat-form-field appearance="outline" class="full-width">
             <mat-label>Username</mat-label>
             <input matInput formControlName="username" />
-            <mat-error *ngIf="registerForm.get('username')?.hasError('required')">
+            <mat-error *ngIf="registerForm.get('username')?.touched && registerForm.get('username')?.hasError('required')">
               Username is required
             </mat-error>
-            <mat-error *ngIf="registerForm.get('username')?.hasError('minlength')">
+            <mat-error *ngIf="registerForm.get('username')?.touched && registerForm.get('username')?.hasError('minlength')">
               Username must be at least 3 characters long
             </mat-error>
           </mat-form-field>
           <mat-form-field appearance="outline" class="full-width">
             <mat-label>Password</mat-label>
             <input matInput formControlName="password" type="password" />
-            <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
+            <mat-error *ngIf="registerForm.get('password')?.touched && registerForm.get('password')?.hasError('required')">
               Password is required
             </mat-error>
-            <mat-error *ngIf="registerForm.get('password')?.hasError('minlength')">
+            <mat-error *ngIf="registerForm.get('username')?.touched && registerForm.get('password')?.hasError('minlength')">
               Password must be at least 6 characters long
             </mat-error>
           </mat-form-field>
@@ -27,12 +27,6 @@
         <div class="button-group">
           <button mat-raised-button color="primary" type="submit">Register</button>
         </div>
-        <mat-hint *ngIf="successMessage" class="success-message">
-          {{ successMessage }}
-        </mat-hint>
-        <mat-error *ngIf="errorMessage" class="error-message">
-          {{ errorMessage }}
-        </mat-error>
       </form>
       <button mat-button color="accent" routerLink="/login">Login</button>
     </mat-card-content>
