Dynamic loading of multiple choice question component

--- a/client/src/app/play-quiz/play-quiz.component.html
+++ b/client/src/app/play-quiz/play-quiz.component.html
@@ -4,42 +4,44 @@
     <mat-accordion>
       <mat-expansion-panel [expanded]="!showQuestions">
         <mat-expansion-panel-header>
-          <mat-panel-title>
-            Reading
-          </mat-panel-title>
+          <mat-panel-title> Reading </mat-panel-title>
         </mat-expansion-panel-header>
         <p>{{ quiz?.reading }}</p>
       </mat-expansion-panel>
     </mat-accordion>
-    <button mat-raised-button color="primary" (click)="viewQuestions()" *ngIf="!showQuestions">View Questions</button>
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="viewQuestions()"
+      *ngIf="!showQuestions"
+    >
+      View Questions
+    </button>
   </section>
 
   <section class="questions" *ngIf="showQuestions">
-    <mat-accordion>
-      <mat-expansion-panel *ngFor="let question of quiz?.questions; let i = index"
-        [ngClass]="quizSubmitted ? {'correct': questionResults[i], 'incorrect': userAnswers[i] && !questionResults[i]} : {}">
+    <ng-container *ngFor="let question of quiz?.questions; let i = index">
+      <mat-expansion-panel>
         <mat-expansion-panel-header>
-          <mat-panel-title>
-            {{ question.question }}
-          </mat-panel-title>
-          <mat-panel-description> {{ userAnswers[i] ? 'Answered' : 'Not answered' }}</mat-panel-description>
+          <mat-panel-title>{{ question.question }}</mat-panel-title>
         </mat-expansion-panel-header>
-        <mat-radio-group [(ngModel)]="userAnswers[i]" [disabled]="quizSubmitted">
-          <mat-radio-button *ngFor="let option of question.options; let j = index" [value]="j">
-            {{ option }}
-          </mat-radio-button>
-        </mat-radio-group>
+  
+        <ng-container #container></ng-container> <!-- Placeholder for dynamic component, note this is within ngIf -->
       </mat-expansion-panel>
-    </mat-accordion>
-    <button mat-raised-button color="accent" (click)="openConfirmationDialog()" *ngIf="!quizSubmitted">Submit
-      Quiz</button>
+    </ng-container>
+    <button mat-raised-button color="accent" (click)="submitQuiz()" *ngIf="!quizSubmitted">Submit Quiz</button>
   </section>
 
   <section class="results">
     <mat-card *ngIf="quizSubmitted">
       <mat-card-content>
-        <p>You answered {{ score }} out of {{ quiz?.questions?.length }} questions correctly.</p>
-        <button mat-raised-button color="primary" (click)="resetQuiz()">Retry</button>
+        <p>
+          You answered {{ score }} out of
+          {{ quiz?.questions?.length }} questions correctly.
+        </p>
+        <button mat-raised-button color="primary" (click)="resetQuiz()">
+          Retry
+        </button>
       </mat-card-content>
     </mat-card>
   </section>
