--- a/client/src/app/multiple-choice-question/multiple-choice-question.component.html
+++ b/client/src/app/multiple-choice-question/multiple-choice-question.component.html
@@ -1,15 +1,28 @@
-<h1>Multiple choice</h1>
-<div>
-  <mat-radio-group
-    [(ngModel)]="userAnswer"
-    [disabled]="disabled"
-    (ngModelChange)="onAnswerSelected($event)"
-  >
-    <mat-radio-button
-      *ngFor="let option of question.options; let j = index"
-      [value]="j"
+<mat-expansion-panel
+  [ngClass]="{
+    'correct-answer': showAnswer && isAnswerCorrect(),
+    'wrong-answer': showAnswer && !isAnswerCorrect()
+  }"
+>
+  <mat-expansion-panel-header>
+    <mat-panel-title>{{ question.question }}</mat-panel-title>
+    <mat-panel-description *ngIf="showAnswer && !isAnswerCorrect()">
+      <p>Correct answer: {{ question.options[question.answer] }}</p>
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+
+  <div>
+    <mat-radio-group
+      [(ngModel)]="userAnswer"
+      [disabled]="disabled"
+      (ngModelChange)="onAnswerSelected($event)"
     >
-      {{ option }}
-    </mat-radio-button>
-  </mat-radio-group>
-</div>
+      <mat-radio-button
+        *ngFor="let option of question.options; let j = index"
+        [value]="j"
+      >
+        {{ option }}
+      </mat-radio-button>
+    </mat-radio-group>
+  </div>
+</mat-expansion-panel>
